# fcitx5-table-extra

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  Messages.sh  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  ibus-table-boshiamy.spec.in  org.fcitx.Fcitx5.Addon.TableExtra.metainfo.xml.in  org.fcitx.fcitx5-table-extra.metainfo.xml.in  wubi98-large.conf.in  wubi98-single.txt
.github/workflows/: check.yml
debian/: changelog  control  copyright  docs  rules  watch
icons/: CMakeLists.txt  Makefile.am  Makefile.in
m4/: Makefile.am  Makefile.in
po/: CMakeLists.txt  LINGUAS  POTFILES.in.in  ca.po  da.po  de.po  fcitx-table-extra.pot  fcitx5-table-extra.pot  he.po  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
tables/: CMakeLists.txt  Makefile.am  Makefile.in  array30-big.conf.in  array30-big.txt  array30-large.conf.in  array30-large.txt  array30.conf.in  array30.txt  boshiamy.conf.in  boshiamy.txt  cangjie-big.conf.in  cangjie-big.txt  cangjie-large.conf.in  cangjie-large.txt  cangjie3.conf.in  cangjie3.txt  cangjie5.conf.in  cangjie5.txt  cantonese.conf.in  cantonese.txt  cantonhk.conf.in  cantonhk.txt  easy-big.conf.in  easy-big.txt  easy-large.conf.in  easy-large.txt  jyutping-table.conf.in  jyutping-table.txt  jyutping.conf.in  jyutping.txt  quick-classic.conf.in  quick-classic.txt  quick3.conf.in  quick3.txt  quick5.conf.in  quick5.txt  scj6.conf.in  scj6.txt  stroke5.conf.in  (+22 more)
